# backend/api/internal/airport/dto/list_airports_response.go
@@ -6,3 +6,9 @@ type AirportResponse struct {
 	ID uuid.UUID `json:"id"`
 	AirportDTO
 }
+
+type ListAirportsResponse struct {
+	Items      []AirportResponse `json:"items"`
+	NextCursor *string           `json:"next_cursor"`
+	HasMore    bool              `json:"has_more"`
+}
